# Stock-Radar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-TW.md  app.py  buildAndStart.ps1  buildAndStart.sh  docker-compose.yml  requirements.txt
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_seed_industries.py  003_add_accuracy_review.py  004_add_news_sentiment.py  005_add_ticker_profiles.py  006_add_tw_top20_industry.py  007_expand_industry_tickers_to_top20.py  008_add_building_computer_etf_industries.py  009_add_active_clients.py  010_add_active_client_browser_fields.py
backend/app/: config.py  db.py  dependencies.py  main.py  scheduler.py
backend/app/models/: __init__.py  accuracy_review.py  active_client.py  alert.py  industry.py  market_data_cache.py  news_sentiment.py  score_history.py  ticker_info_cache.py  ticker_profile.py  user.py  watchlist.py
backend/app/repositories/: accuracy_review_repo.py  alert_repo.py  industry_repo.py  market_data_repo.py  news_sentiment_repo.py  score_history_repo.py  watchlist_repo.py
backend/app/routers/: accuracy.py  alerts.py  backtest.py  charts.py  forecast.py  industries.py  news.py  scores.py  technical.py  usage.py  watchlists.py
backend/app/schemas/: alert.py  backtest.py  forecast.py  news.py  score.py  technical.py  usage.py  watchlist.py
backend/core/: backtest.py  data.py  metrics.py  scoring.py  sentiment.py  technical.py
backend/scripts/: migrate_localstorage.py
core/: backtest.py  data.py  (+3 more)
(+56 files in other folders)
